force-app/package/objects/OxfordRiskAuthProvider__mdt/OxfordRiskAuthProvider__mdt.object-meta.xml
<CustomObject>
    <label>Oxford Risk Auth Provider</label>
    <pluralLabel>Oxford Risk Auth Providers</pluralLabel>
</CustomObject>