force-app/package/objects/OxfordRiskAuthProvider__mdt/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <defaultValue>&apos;https://org.oxfordrisk.io&apos;</defaultValue>
    <description>The default base URL</description>
    <inlineHelpText>The default base url (https://org.oxfordrisk.io)</inlineHelpText>
    <label>Base URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>