force-app/package/objects/OxfordRiskAuthProvider__mdt/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The email address to sign in to the API with</description>
    <inlineHelpText>The email address to sign in to the API with</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>