force-app/package/objects/OxfordRiskAuthProvider__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <inlineHelpText>Encrypted Password in Base64 encodeding</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>