force-app/package/objects/OxfordRiskAuthProvider__mdt/fields/Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Subdomain__c</fullName>
    <description>The subdomain provided for your company</description>
    <inlineHelpText>The subdomain provided for your company</inlineHelpText>
    <label>Sub Domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>